--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -116,3 +116,34 @@ span:not(:first-child) {
   border-left: 2px solid #333;
   padding-left: 10px;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+label{
+  margin-bottom: 10px;
+}
+
+input, select, textarea{
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #333;
+}
+
+input[type="submit"]{
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover{
+  background-color: #555;
+}
